2025-05-04  dana@dana.is  <dana@dana.is>

	* Max Coplan: 53535: Util/helpfiles: fix builds with
	interactive manpagers

2025-05-01  Peter Stephenson  <p.stephenson@samsung.com>

	* 53529: Test/A04redirect.ztst: Avoid using system area for
	non-existent files as permissions may affect the result.

2025-04-28  dana  <dana@dana.is>

	* unposted: README: add missed note about <<< redirection

	* 53527: Doc/Zsh/contrib.yo, Functions/Misc/zgetopt, NEWS,
	Test/Z04zgetopt.ztst: remove zgetopt (feature not ready)

2025-04-27  dana  <dana@dana.is>

	* unposted: Doc/Zsh/contrib.yo, Doc/Zsh/mod_zutil.yo:
	document zparseopts's lack of support for abbreviating long
	options

	* unposted: Doc/Zsh/contrib.yo: adjust zgetopt wording

	* 53516: Doc/Zsh/contrib.yo, Functions/Misc/zgetopt, NEWS,
	Test/Z04zgetopt.ztst: add zgetopt contrib function

	* 53515: Test/B01cd.ztst: correct ztst documentation error

2025-04-20  Eric Cook  <illua@users.sourceforge.net>

	* unposted: Config/version.mk, Etc/FAQ.yo, NEWS, README: Test
	release: zsh-5.9.0.2-test.

	* 53463: Completion/Unix/Type/_hosts: allow overriding the default
	matching control

2025-04-19  dana  <dana@dana.is>

	* 53483: Doc/Zsh/mod_zutil.yo, Src/Modules/zutil.c,
	Test/V12zparseopts.ztst: with `zparseopts -G`, accept only
	'--' as parsing terminator

	* 53482: Src/Modules/zutil.c,
	Src/Modules/Test/V12zparseopts.ztst: with `zparseopts -G`,
	always add options options with optional args to array with =

2025-04-15  Bart Schaefer  <schaefer@zsh.org>

	* 53454: Src/hist.c: fix interrupt handling in savehistfile()

2025-04-15  Eric Cook  <illua@users.sourceforge.net>

	* 53485: NEWS: update for version 5.10

2025-04-14  Mikael Magnusson  <mikachu@gmail.com>

	* unposted: _typeset: fix typo

2025-04-13  dana  <dana@dana.is>

	* unposted: NEWS: update per w/53257 and w/53260

2025-04-04  Oliver Kiddle  <opk@zsh.org>

	* Kyle Andelin: 53449: Completion/Zsh/Context/_subscript:
	do not complete indices for empty array subscripts
